Fix center alignment of Landing page text.

--- a/llc_frontend/src/style/landing_page.css
+++ b/llc_frontend/src/style/landing_page.css
@@ -18,7 +18,7 @@ html, body {
     position: absolute;
     transform: translate(-50%, -50%);
     top: 20%;
-    left: 60%;
+    left: 50%;
     width:  1000px;
   }
   
